# technical-test-python

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/local/: Dockerfile
document_manager/: __version__.py  app.py
document_manager/core/: cors.py
document_manager/views/: views.py
